generate yolo detects and convert to voc json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["--config", "configs/img_blur.yaml"]
+            "args": ["--config", "configs/vid_blur.yaml"]
         }
     ]
 }
