--- a/environment.yml
+++ b/environment.yml
@@ -1,28 +1,87 @@
 name: dashanon
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=5.1
+  - blas=1.1
   - bzip2=1.0.8
-  - ca-certificates=2023.05.30
+  - ca-certificates=2023.7.22
+  - cairo=1.16.0
+  - dbus=1.13.18
+  - eigen=3.4.0
+  - expat=2.2.10
+  - ffmpeg=4.2.2
+  - fontconfig=2.14.1
+  - freetype=2.10.4
+  - giflib=5.2.1
+  - glib=2.69.1
+  - gmp=6.2.1
+  - gnutls=3.6.13
+  - graphite2=1.3.14
+  - gst-plugins-base=1.14.1
+  - gstreamer=1.14.1
+  - harfbuzz=4.3.0
+  - hdf5=1.10.6
+  - icu=58.2
+  - jpeg=9e
+  - krb5=1.20.1
+  - lame=3.100
   - ld_impl_linux-64=2.38
+  - lerc=3.0
+  - libclang=10.0.1
+  - libdeflate=1.17
+  - libedit=3.1.20221030
+  - libevent=2.1.12
   - libffi=3.4.4
   - libgcc-ng=11.2.0
+  - libgfortran-ng=13.1.0
+  - libgfortran5=13.1.0
   - libgomp=11.2.0
+  - libllvm10=10.0.1
+  - libopenblas=0.3.20
+  - libopus=1.3.1
+  - libpng=1.6.39
+  - libpq=12.15
+  - libprotobuf=3.20.3
   - libstdcxx-ng=11.2.0
+  - libtiff=4.5.0
   - libuuid=1.41.5
+  - libvpx=1.7.0
+  - libwebp=1.2.4
+  - libwebp-base=1.2.4
+  - libxcb=1.15
+  - libxkbcommon=1.0.1
+  - libxml2=2.9.14
+  - libxslt=1.1.35
+  - lz4-c=1.9.4
   - ncurses=6.4
+  - nettle=3.6
+  - nspr=4.35
+  - nss=3.89.1
+  - numpy-base=1.24.3
+  - openblas=0.3.20
+  - opencv=4.6.0
+  - openh264=2.1.1
+  - openjpeg=2.4.0
   - openssl=3.0.9
+  - pcre=8.45
   - pip=23.2.1
+  - pixman=0.40.0
   - python=3.11.3
+  - qt-main=5.15.2
+  - qt-webengine=5.15.9
+  - qtwebkit=5.212
   - readline=8.2
   - setuptools=68.0.0
   - sqlite=3.41.2
   - tk=8.6.12
   - wheel=0.38.4
+  - x264=1!157.20191217
   - xz=5.4.2
   - zlib=1.2.13
+  - zstd=1.5.5
   - pip:
       - aiofiles==22.1.0
       - aiohttp==3.8.5
@@ -72,7 +131,6 @@ dependencies:
       - nvidia-nccl-cu11==2.14.3
       - nvidia-nvtx-cu11==11.7.91
       - oauthlib==3.2.2
-      - opencv-python==4.8.0.74
       - packaging==23.1
       - pandas==2.0.3
       - pillow==10.0.0
